<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name" />
    
    <EditText android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/user_city" />
    	
    	<Spinner android:id="@+id/spinnerCity"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:entries="@array/citylist" />

    </LinearLayout>
   
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/hobby_guitar" />
        
        <CheckBox 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/hobby_travel" />
        
        <CheckBox 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/hobby_read" />
        
        <CheckBox 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        
    </LinearLayout>

</LinearLayout>